# shapemapper2

./: CMakeLists.txt  LICENSE.txt  README.html  README.md  run_example.sh  run_example_modular.sh  shapemapper
cpp-src/: CMakeLists.txt
cpp-src/doc/html/: Histogram_8h_source.html  MutationCounter_8cpp.html  MutationCounter_8h.html  MutationCounter_8h_source.html  MutationParserExe_8cpp.html  MutationParser_8cpp.html  MutationParser_8h.html  MutationParser_8h_source.html  Mutation_8h.html  Mutation_8h_source.html  ReadLengthFilterExe_8cpp.html  ReadLengthFilter_8cpp.html  ReadTrimmer_8h.html  ReadTrimmer_8h_source.html  annotated.html  classHistogram-members.html  classHistogram.html  classMutationCounter-members.html  classMutationCounter.html  classScanningDeque.html  classVariantCounter-members.html  classVariantCounter.html  classes.html  classmutation_1_1Mutation-members.html  classmutation_1_1Mutation.html  classmutation_1_1TaggedMutation-members.html  classmutation_1_1TaggedMutation.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  (+10 more)
cpp-src/doc/html/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enumvalues_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  (+3 more)
cpp-src/doxygen-bootstrapped/: doxy-boot.js  header.html
cpp-src/src/: CMakeLists.txt  Histogram.h  Mutation.h  MutationCounter.cpp  MutationCounter.h  MutationCounterExe.cpp  MutationParser.cpp  MutationParser.h  MutationParserExe.cpp  ReadLengthFilter.cpp  ReadLengthFilterExe.cpp  ReadTrimmer.cpp  ReadTrimmer.h  ReadTrimmerExe.cpp
cpp-src/test/: CMakeLists.txt  testMutationCounter.cpp  testMutationParser.cpp  testReadLengthFilter.cpp  testReadTrimmer.cpp
cpp-src/test/files/: CR_line_ending.fastq  nearly_empty.fastq
docs/: FAQ.html  FAQ.md  N7-G.md  analysis_steps.html  analysis_steps.md  building.html  building.md  changelog.html  changelog.md  dmsmode.md  file_formats.html  file_formats.md  modular_workflow.html  modular_workflow.md  other_software.html  other_software.md  quality_control.md  todo.html  todo.md
docs/images/: multinuc_mutations_tmp.odp
install/: bin_paths.sh  build_all.sh  build_binaries.sh  build_curl.sh  build_deps.sh  build_thirdparty.sh  curl_paths.sh  dep_paths.sh  get_miniconda.sh  thirdparty_paths.sh
internals/cpp-src/: CMakeLists.txt
internals/cpp-src/doc/html/: Histogram_8h.html  Histogram_8h_source.html  MutationCounterExe_8cpp.html  MutationCounter_8cpp.html  MutationCounter_8h.html  MutationCounter_8h_source.html  MutationParserExe_8cpp.html  MutationParser_8cpp.html  MutationParser_8h.html  MutationParser_8h_source.html  MutationProcessing_8h.html  MutationProcessing_8h_source.html  Mutation_8h.html  Mutation_8h_source.html  PrimerPair_8h.html  PrimerPair_8h_source.html  ReadTrimmerExe_8cpp.html  ReadTrimmer_8cpp.html  ReadTrimmer_8h.html  ReadTrimmer_8h_source.html  Read_8h.html  Read_8h_source.html  annotated.html  classHistogram-members.html  classHistogram.html  classMutation-members.html  classMutation.html  classMutationCounter-members.html  classMutationCounter.html  classMutationGroup-members.html  classMutationGroup.html  classPrimerPair-members.html  classPrimerPair.html  classRead-members.html  classRead.html  classScanningDeque-members.html  classScanningDeque.html  classVariantCounter-members.html  classVariantCounter.html  classes.html  (+36 more)
internals/cpp-src/doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  (+27 more)
internals/cpp-src/doxygen-bootstrapped/: footer.html
internals/cpp-src/src/: CMakeLists.txt  Histogram.h  Mutation.h  MutationCounter.cpp  MutationCounter.h  MutationCounterExe.cpp  MutationParser.cpp  MutationParser.h  MutationParserExe.cpp  MutationProcessing.h  PrimerPair.h  Read.h  ReadTrimmer.cpp  ReadTrimmer.h  ReadTrimmerExe.cpp  util.h
internals/cpp-src/test/: CMakeLists.txt  StreamCombineScratch.cpp  testHistogram.cpp  testMutationCounter.cpp  testMutationParser.cpp  testReadTrimmer.cpp
internals/cpp-src/test/files/: 3_R1.fastq  contains_short_read.fastq  line_endings.txt  malformed.fastq  paired_mutations.mut  unpaired_mutations.mut
internals/install/: bin_paths.sh  build_all.sh  build_binaries.sh  build_curl.sh  build_deps.sh  build_thirdparty.sh  curl_paths.sh  get_miniconda.sh
internals/paths/: bin_paths.sh  dep_paths.sh  thirdparty_paths.sh
internals/python/: cli.py  run_debug.py
internals/release/: render_readme_html.sh  tarball_release.sh
internals/test/: ROC_tests.sh  component_failure_tests.sh  cpp_unit_tests.sh  end-to-end_temp.sh  end-to-end_tests.sh  fail_tester.py  run_all_tests.sh  test_check_fasta.sh  variant_correction_tests.sh
internals/thirdparty_helper/: build_thirdparty.sh  get_miniconda.sh  shapemapper_compile_env.yml
python/: cli.py  run_example.py
python/pyshapemap/: component.py  (+7 more)
release/: render_readme_html.sh  tarball_release.sh
test/: component_failure_tests.sh  cpp_unit_tests.sh  end-to-end_tests.sh  fail_tester.py  run_all_tests.sh  test_check_fasta.sh  variant_correction_tests.sh
(+40 files in other folders)
